# pygeolib

./: README.md  pyproject.toml
src/pygeolib/: __init__.py  point.py  rectangle.py
tests/: test_point.py  test_rectangle.py
