[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pygeolib"
version = "0.0.1"
authors = [
  { name="gen-how", email="author@example.com" },
]
description = "A light-weight Python geometry library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Some dependencies.
]
keywords = [
    "math",
    "geometry",
]


[project.urls]
"Homepage" = "https://github.com/gen-how/pygeolib"
"Bug Tracker" = "https://github.com/gen-how/pygeolib/issues"


[project.optional-dependencies]
dev = [
    # Some development related dependencies.
    # "pylint",
    "yapf",
    # "black",
]
test = [
    # Some testing related dependencies.
]
